--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -30,6 +30,8 @@ body.sticky-bottom-footer {
 .profile {
   img {
     width: 85%;
+    min-height: 200px;
+    background-color: #f8f9fa;
   }
 }
 
